<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vit01.serverlistener.MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/service_toggle_state_string"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        style="@style/AppTheme.CaptionTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/working_protocol_string" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:entries="@array/data_sync_types" />

    <TextView
        android:id="@+id/textView2"
        style="@style/AppTheme.CaptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_address_string" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/textView3"
        style="@style/AppTheme.CaptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_interval_string" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        style="@style/AppTheme.CaptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_action_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_string" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_settings_string" />
</LinearLayout>